优化代码大小，开发report界面

--- a/f2e/index.html
+++ b/f2e/index.html
@@ -10,6 +10,19 @@
 </head>
 <body>
 <div id="root"></div>
-<script src="dist/bundle.js"></script>
+
+<!-- 公共部分 -->
+<script src="static/react.js" type="text/javascript" charset="utf-8"></script>
+<script src="static/react-dom.js" type="text/javascript" charset="utf-8"></script>
+<!-- 报表使用 -->
+<script type="text/javascript">
+	var qids=[1,2,3,4,5];
+</script>
+<script src="static/echarts.simple.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="static/jquery.js" type="text/javascript" charset="utf-8"></script>
+<!--发布和前台使用 -->
+<script src="static/redux.js" type="text/javascript" charset="utf-8"></script>
+<!-- 名字要一致 -->
+<script src="dist/report.js"></script>
 </body>
 </html>
