--- a/f2e/index.html
+++ b/f2e/index.html
@@ -23,6 +23,6 @@
 <!--发布和前台使用 -->
 <script src="static/redux.js" type="text/javascript" charset="utf-8"></script>
 <!-- 名字要一致 -->
-<script src="dist/report.js"></script>
+<script src="dist/bundle.js"></script>
 </body>
 </html>
